# 6DOF_rrbot_moveit_gazebo

./: README.md
gripper_description/: CMakeLists.txt  package.xml
gripper_description/config/: gripper_control.yaml
gripper_description/launch/: gripper_controller.launch
gripper_description/urdf/: gripper.gazebo  gripper.xacro
rrbot_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rrbot_hand_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  rrbot.srdf  simple_moveit_controllers.yaml
rrbot_hand_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
rrbot_interface/: CMakeLists.txt  package.xml
rrbot_interface/scripts/: rrbot_move_python.py
rrbot_interface/src/: rrbot_move.cpp
rrbot_interface_python/: CMakeLists.txt  package.xml
rrbot_interface_python/scripts/: rrbot_move_python.py  ur_move_python.py
rrbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
rrbot_moveit_config/config/: fake_controllers.yaml  gazebo_rrbot.urdf  ompl_planning.yaml  ros_controllers.yaml  rrbot.srdf  simple_moveit_controllers.yaml
rrbot_moveit_config/launch/: demo.launch  gazebo.launch  (+15 more)
(+9 files in other folders)
